# visao-computacional

./: README.md  pyproject.toml  requirements.txt
src/visao_computacional/: main.py
