[project]
name = "visao-computacional"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Leibnitz Amorim", email = "leibnitzfsa@gmail.com"},
]
dependencies = [
    "mediapipe>=0.10.15",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
